<resources>
    <string name="app_name">RssReader</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="world">World</string>
    <string name="business">Business</string>
    <string name="startup">Startup</string>
    <string name="entertainment">Entertainment</string>
    <string name="logout">Return</string>
    <string name="news_offline">Offline news</string>
    <string name="no_connection">No connection. You are offline</string>
</resources>
