<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupCategory"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/world"
            android:icon="@drawable/ic_world"
            android:title="@string/world" />
        <item
            android:id="@+id/business"
            android:icon="@drawable/ic_business"
            android:title="@string/business" />
        <item
            android:id="@+id/startup"
            android:icon="@drawable/ic_startup"
            android:title="@string/startup" />
        <item
            android:id="@+id/entertainment"
            android:icon="@drawable/ic_entertainment"
            android:title="@string/entertainment" />
    </group>
    <group
        android:id="@+id/groupOffline"
        android:checkableBehavior="single">
        <item
            android:id="@+id/offline"
            android:icon="@drawable/ic_news_off"
            android:title="@string/news_offline" />
    </group>
    <group
        android:id="@+id/groupLogOut"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
